[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Viewer.gd" type="Script" id=1]
[ext_resource path="res://scripts/GridMap.gd" type="Script" id=2]
[ext_resource path="res://scripts/BlockGenerator.gd" type="Script" id=3]
[ext_resource path="res://scripts/World.gd" type="Script" id=4]
[ext_resource path="res://environment.tres" type="Environment" id=5]
[ext_resource path="res://materials/scanner_material.tres" type="Material" id=6]

[sub_resource type="BoxShape" id=1]

[sub_resource type="QuadMesh" id=2]
material = ExtResource( 6 )
size = Vector2( 200, 50 )

[node name="World" type="Spatial"]
script = ExtResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.853553, -0.146447, -0.5, 0.5, 0.5, 0.707107, 0.146447, -0.853553, 0.5, 0, 2.369, 0 )

[node name="Viewer" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 102 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Viewer"]
shape = SubResource( 1 )

[node name="GimbalHorizontal" type="Spatial" parent="Viewer"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="GimbalVertical" type="Spatial" parent="Viewer/GimbalHorizontal"]
transform = Transform( 1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Viewer/GimbalHorizontal/GimbalVertical"]
environment = ExtResource( 5 )
far = 2048.0

[node name="GridMap" type="GridMap" parent="."]
cell_size = Vector3( 4, 20, 4 )
cell_center_y = false
data = {
"cells": PoolIntArray(  )
}
script = ExtResource( 2 )
__meta__ = {
"_editor_clip_": 0
}

[node name="BlockGenerator" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Scanner" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 100 )
mesh = SubResource( 2 )
material/0 = null

[connection signal="block_loaded" from="." to="GridMap" method="_on_block_loaded"]
[connection signal="viewer_moved" from="Viewer" to="." method="_on_viewer_moved"]
